istio/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: todo-app-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todo-app
spec:
  hosts:
  - "*"
  gateways:
  - todo-app-gateway
  http:
  - name: "frontend" 
    route:
    - destination:
        host: frontend
        port:
          number: 8080
